--- a/criacaoIMC.html
+++ b/criacaoIMC.html
@@ -90,7 +90,7 @@
             <div class="py-3">
                 <div class="row row-cols-1 row-cols-md-4" id="cards">
                   <div class="col py-2 bg-card-gradient">
-                    <div class="card mb-3" id="cor">
+                    <div class="card mb-3" id="cor" style="background-color:purple";>
                       <div class="card-body">
                         <h5 class="card-title" id="nomes"></h5>
                         <p class="card-text" id="resultado"></p>
