--- a/criacaoIMC.html
+++ b/criacaoIMC.html
@@ -4,113 +4,125 @@
 <!-- https://www.hdshop.hubsapiens.com.br -->
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aula 1</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="criacao.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Aula 1</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link rel="stylesheet" href="criacao.css" />
 </head>
 
 <body>
-    <header class="row">
-        <div class="col-12 col-md-12">
-          <nav class="nav-bar">
-            <div class="nav-list">
-              <ul>
-                <li class="nav-item"><a href="index.html" class="nav-link">Início</a></li>
-                <li class="nav-item"><a href="criacao.html" class="nav-link">Calculo de TBM</a></li>
-                <li class="nav-item">
-                  <a href="criacaoIMC.html" class="nav-link">Calculo IMC</a>
-                </li>
-              </ul>
-            </div>
-          </nav>
+  <header class="row">
+    <div class="col-12 col-md-12">
+      <nav class="nav-bar">
+        <div class="nav-list">
+          <ul>
+            <li class="nav-item"><a href="index.html" class="nav-link">Início</a></li>
+            <li class="nav-item"><a href="criacao.html" class="nav-link">Calculo de TBM</a></li>
+            <li class="nav-item">
+              <a href="criacaoIMC.html" class="nav-link">Calculo IMC</a>
+            </li>
+          </ul>
         </div>
-      </header>
+      </nav>
+    </div>
+  </header>
 
 
-      <div class="card">
-        <div class="card-body">
-    <main class="container">
+  <div class="card">
+    <div class="card-body">
+      <main class="container">
         <div class="row">
-            <div class="col-12 col-md-6">
+
+          <div class="col-12 ">
+            <div class="card">
+              <div class="card-header text-center" id="cabecaCard">
                 <div>
-                    <h2 class="py-5">Formulário de cadastro</h2>
+                  <h2 class="py-5">Calculadora de IMC</h2>
+                </div>
+              </div>
+              <div class="card-body" id="corpoCard">
+
+
+
+
+                <div class="py-3">
+                  <label for="nome" class="form-label">Nome</label>
+                  <input type="text" id="nome" class="form-control" placeholder="Digite seu nome" required>
                 </div>
 
                 <div class="py-3">
-                    <label for="nome">Nome</label>
-                    <input type="text" id="nome" class="form-control" placeholder="Digite seu nome">
+                  <label for="sobrenome">Sobrenome</label>
+                  <input type="text" id="sobrenome" class="form-control" placeholder="Digite seu sobrenome">
                 </div>
 
                 <div class="py-3">
-                    <label for="sobrenome">Sobrenome</label>
-                    <input type="text" id="sobrenome" class="form-control" placeholder="Digite seu sobrenome">
-                </div>
+                  <label for="categoria">Categoria</label>
+                  <select id="categoria" class="form-control">
 
-                <div class="py-3">
-                    <label for="categoria">Categoria</label>
-                    <select id="categoria" class="form-control">
+                    <option value="Adulto">Adulto</option>
+                    <option value="Infantil">Infantil</option>
 
-                        <option value="Adulto">Adulto</option>
-                        <option value="Infantil">Infantil</option>
-
-                    </select>
+                  </select>
                 </div>
 
                 <!-- ------------------- -->
                 <div class="py-3">
-                    <div class="row">
-                        <div class="col-6">
-                            <label for="peso">Peso</label>
-                            <input type="number" id="peso" class="form-control" placeholder="Digite seu peso">
-
-                        </div>
-
-                        <div class="col-6">
-                            <label for="altura">Altura</label>
-                            <input type="number" id="altura" class="form-control" placeholder="Digite seu altura">
-
-                        </div>
+                  <div class="row">
+                    <div class="col-6">
+                      <label for="peso">Peso</label>
+                      <input type="number" id="peso" class="form-control" placeholder="Digite seu peso">
 
                     </div>
+
+                    <div class="col-6">
+                      <label for="altura">Altura</label>
+                      <input type="number" id="altura" class="form-control" placeholder="Digite seu altura">
+
+                    </div>
+
+                  </div>
 
                 </div>
 
                 <!-- --------------------- -->
 
                 <div class="py-3 text-center">
-                    <button id="btn" class="btn btn-outline-primary w-50">Cadastrar</button>
+                  <button id="btn" class="btn btn-outline-primary w-50" type="submit">Cadastrar</button>
                 </div>
 
 
-
-
+              </div>
             </div>
-            <div class="py-3">
-                <div class="row row-cols-1 row-cols-md-4" id="cards">
-                  <div class="col py-2 bg-card-gradient">
-                    <div class="card mb-3" id="cor" style="background-color:purple";>
-                      <div class="card-body">
-                        <h5 class="card-title" id="nomes"></h5>
-                        <p class="card-text" id="resultado"></p>
-                      </div>
-                    </div>
+
+          </div>
+          <div class="py-3">
+            <div class="row row-cols-1 row-cols-md-4" id="cards">
+              <div class="col py-2 ">
+                <div class="card mb-3" id="cor">
+                  <div class="card-body">
+                    <h5 class="card-title" id="nomes"></h5>
+                    <p class="card-text" id="resultado"></p>
                   </div>
                 </div>
               </div>
+            </div>
+          </div>
         </div>
-    </main>
-
-          
-        </div>
-      </div>
+      </main>
 
 
+    </div>
+  </div>
 
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <script src="imc.js"></script>
+
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
+  <script src="imc.js"></script>
 </body>
 
 </html>
