--- a/criacao.html
+++ b/criacao.html
@@ -17,7 +17,7 @@
         <div class="nav-list">
           <ul>
             <li class="nav-item"><a href="index.html" class="nav-link">Início</a></li>
-            <li class="nav-item"><a href="criacao.html" class="nav-link">Calculo de TBM</a></li>
+            <li class="nav-item"><a href="criacao.html" class="nav-link">Calculo de TMB</a></li>
             <li class="nav-item">
               <a href="criacaoIMC.html" class="nav-link">Calculo IMC</a>
             </li>
@@ -39,7 +39,7 @@
             <div class="card">
               <div class="card-header text-center" id="cabecaCard">
                 <div>
-                  <h2 class="py-5">Calculadora de TBM</h2>
+                  <h2 class="py-5">Calculadora de TMB</h2>
                 </div>
               </div>
 
@@ -97,7 +97,7 @@
                 <!-- --------------------- -->
 
                 <div class="py-3 text-center">
-                  <button id="btn" class="btn btn-outline-primary w-50" type="submit">Cadastrar</button>
+                  <button id="btn" class="btn btn-outline-primary w-50" type="submit">Calcular</button>
                 </div>
               </div>
             </div>
