--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="nav-list">
           <ul>
             <li class="nav-item"><a href="index.html" class="nav-link">Início</a></li>
-            <li class="nav-item"><a href="criacao.html" class="nav-link">Calculo de TBM</a></li>
+            <li class="nav-item"><a href="criacao.html" class="nav-link">Calculo de TMB</a></li>
             <li class="nav-item">
               <a href="criacaoIMC.html" class="nav-link">Calculo IMC</a>
             </li>
