--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Document</title>
+  <title>Home</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="criacao.css" />
@@ -30,8 +30,8 @@
 
   <main class="container">
     <div class="row">
-      <div class="title col-12 col-md">
-        <h1 class="py-5">Os Software que usamos</h1>
+      <div class="title col-12 ">
+        <h1 class="py-5">Software que usamos em DS</h1>
       </div>
       <div class="col-12 col-md-6 ">
         <div class="IMGvs">
