--- a/criacao.html
+++ b/criacao.html
@@ -126,6 +126,12 @@
     </div>
   </div>
 
+  <footer>
+    <div id="pe" class="quadrado">
+      <div class="conteudo">Site feito por: Mateus
+        Henrique <br> ©Copyright 2024</div>
+    </div>
+  </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
